Fix layout on small screens

--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -2,7 +2,13 @@
   font-family: "Source Serif Pro", serif;
   margin: 0 auto;
   max-width: 800px;
-  padding: 0 70px;
+  padding: 0 32px;
+}
+
+@media screen and (min-width: 420px) {
+  .main {
+    padding: 0 70px;
+  }
 }
 
 .main p {
