--- a/styles/ArticleList.module.css
+++ b/styles/ArticleList.module.css
@@ -1,7 +1,13 @@
 .container {
   margin: 76px auto;
   max-width: 800px;
-  padding: 0 70px;
+  padding: 0 32px;
+}
+
+@media screen and (min-width: 420px) {
+  .container {
+    padding: 0 70px;
+  }
 }
 
 .subheading {
