--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  margin: 0;
+}
+
 footer {
   font-family: "Source Sans Pro", serif;
   font-size: 16px;
